--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Git</title>
+	<title>First Web Page</title>
+	<link rel="stylesheet" type="text/css" href="deco.css">
 </head>
-<header><h1>YO</h1></header>
 <body>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	<header>
+		<h2>Company Title Information</h2>
+	</header>
+	<section>
+			<h3>About us</h3>
+			<p>
+				This section is for about info. This section is for about info.
+			</p>
+	</section>
+	<footer>
+		Copyright (c)2018 . All rights reserved.
+	</footer>
 </body>
 </html>
